[package]
name = "uppies"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.3", features = ["tracing"], default-features = false }
prometheus = "0.14.0"
rand = "0.9.1"
surge-ping = "0.8.2"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
